random fiddling led to map and mesh on screen more or less correctly, but not satisfied.