@@ -56,7 +56,7 @@
           but 'ALL_UNNAMED' warns it's an unknown module,
           and all the other module names I can think of generate more warnings
           -->
-          <vmargs>--illegal-native-access=allow ${clojure.vmargs}</vmargs>
+          <vmargs>--sun-misc-unsafe-memory-access=allow --illegal-native-access=allow ${clojure.vmargs}</vmargs>
           <clojureOptions>${clojure.options}</clojureOptions>
           <namespaces>
             <namespace>!mop.test.*</namespace>
@@ -77,8 +77,7 @@
           <target>${java-version}</target>
           <compilerArgs>
             <arg>--enable-preview</arg>
-            <!--            <arg>&#45;&#45;enable-native-access=ALL_UNAMED</arg>-->
-          </compilerArgs>
+           </compilerArgs>
         </configuration>
       </plugin>
     </plugins>
